--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Base Framework for HI Front End Developers",
   "main": "app.js",
   "author": "Mark Scripter <mark@mscriptdesign.com>",
+  "repository": "",
+  "readme": "",
   "devDependencies": {
+    "backbone": "^1.1.2",
+    "cheerio": "^0.18.0",
+    "express-session": "^1.10.3",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-express": "^0.1.13",
@@ -14,13 +19,17 @@
     "gulp-react": "^2.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
+    "gulp-svgmin": "^1.1.1",
+    "gulp-svgstore": "^5.0.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
     "gulp-wrapper": "^0.1.5"
   },
   "dependencies": {
     "app-root-path": "^1.0.0",
     "body-parser": "^1.12.0",
     "chalk": "^0.5.1",
+    "connect-flash": "^0.1.1",
     "crypto": "0.0.3",
     "express": "^4.11.2",
     "flux": "^2.0.1",
@@ -28,6 +37,9 @@
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "lodash": "^3.2.0",
-    "method-override": "^2.3.1"
+    "method-override": "^2.3.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "react": "^0.13.0"
   }
 }
