--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "method-override": "^2.3.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "react": "^0.13.0"
+    "react": "^0.13.0",
+    "react-tools": "^0.13.0"
   }
 }
