--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "backbone": "^1.1.2",
     "cheerio": "^0.18.0",
+    "eslint": "^0.24.0",
     "express-session": "^1.10.3",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
@@ -16,7 +17,7 @@
     "gulp-header": "^1.2.2",
     "gulp-jade": "^1.0.0",
     "gulp-jshint": "^1.9.2",
-    "gulp-react": "^2.1.0",
+    "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-svgmin": "^1.1.1",
@@ -38,6 +39,7 @@
     "jade": "^1.9.2",
     "lodash": "^3.2.0",
     "method-override": "^2.3.1",
+    "mongoose": "^3.8.25",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "react": "^0.13.0",
